# shm-ring

./: Cargo.toml
examples/: server.json
examples/client-wasi/: Cargo.toml
examples/client-wasi/src/: main.rs  notify.rs  stream.rs
examples/fizz-buzz/src/: main.rs
examples/io-uring-semantics/: Cargo.toml
lib/shm-pbx/: Cargo.toml
lib/shm-pbx/src/: client.rs  frame.rs  lib.rs  mmap.rs  secret.rs  server.rs
lib/shm-pbx/tests/: io-uring-communicate.rs  io-uring.rs  reaping.rs  server.rs
src/: client.rs  data.rs  frame.rs  io_uring.rs  secret.rs  server.rs  uapi.rs
tests/: io-uring-communicate.rs  io-uring.rs  reaping.rs  server.rs
xtask/cbindgen/: Cargo.toml
