[workspace]
members = [
  "bin/shm-pbx-server",
  "lib/shm-pbx",
  "examples/client-wasi",
  "examples/fizz-buzz",
  "examples/io-uring-semantics",
  "xtask/cbindgen",
]
resolver = "2"

[workspace.dependencies]
shm-pbx = { path = "lib/shm-pbx", version = "0.0.0" }

clap = { version = "4" }
io-uring = { version = "0.7" }
libc = { version = "0.2" }
linux-futex = "1"
uapi = "0.2.13"
quick-error = { version = "2" }
slotmap = { version = "1", default-features = false }
tempfile = "3.10"
tokio = { version = "1" }
