[package]
name = "client-wasi"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
shm-pbx.workspace = true
bytes = "1.6"
clap = { workspace = true, features = ["cargo"] }
memmap2 = "0.9"
quick-error.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { workspace = true, features = ["io-util", "sync"] }
wasmtime = "33.0"
wasmtime-wasi = "33.0"
